container/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rubywarden
  name: rubywarden
spec:
  ports:
  - port: 4567
    protocol: TCP
    targetPort: 4567
  selector:
    app: rubywarden
  sessionAffinity: None
  type: ClusterIP
